commit to local

--- a/web/lesson10/1.html
+++ b/web/lesson10/1.html
@@ -2,10 +2,18 @@
 	<head>
 		<title>haha</title>
 	</head>
+	<!--<link rel="stylesheet" type="text/css" href="3.css" />-->
+	<style>
+		
+		p {
+			border:3px solid yellow;
+		}
+		@import url(3.css);
+	</style>
 	
 	<body>
 		<p>aaa</p>
-		<!--<p style="color:red;background:yellow;font-size:4cm;border:2px;solid;blue;text-align:center">bbb</p>
+		<p>bbb</p>
 		<p>cccc</p>
 	</body>
 <html>
